--- a/app/package.json
+++ b/app/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.28.4",
+    "@tanstack/react-query-devtools": "^5.28.4",
+    "@tanstack/react-table": "^8.20.5",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@tanstack/react-query": "^5.28.4",
-    "@tanstack/react-query-devtools": "^5.28.4",
     "tailwind-merge": "2.3.0"
   },
   "devDependencies": {
